--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -145,6 +145,7 @@
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="@{() -> summaryFragment.cancelOrder()}"
                 android:layout_marginTop="@dimen/margin_between_elements"
                 android:text="@string/cancel" />
 
